# Blackjack

./: .gitignore  Backlog produktu.docx  Cards.cpp  Plik.docx  Przykładowy plik.docx  Pseudokod.txt  README.md  Sprawdzenie poprawności konfiguracji repozytorium Git na cele projektu Blackjack'a - sprawozdanie.docx  Sprawozdanie ze spotkania 02.06.22r..docx  cards.hpp  rand_idx.hpp  split.hpp
Player/: CMakeLists.txt
Player/include/: player.h
Player/src/: player.cpp
Wersje/blackjack_1/: CMakeLists.txt  main.cpp
Wersje/blackjack_1/include/: cards.hpp  cleaning.hpp  croupier.hpp  player.hpp  rand_idx.hpp  split.hpp
Wersje/blackjack_1/src/: cleaning.cpp  croupier.cpp  player.cpp
Wersje/blackjack_1/test/: main_gtest.cpp
Wersje/test_time/: CMakeLists.txt  main.cpp
cleaning_function/: CMakeLists.txt  main.cpp
docs/: catalogue_catalogue.puml  catalogue_product.puml  complex.puml  matlab_matrix.puml  shapes.puml  vehicles_driver.puml  vehicles_vehicles.puml
include/: croupier.hpp  croupier.txt
